@@ -212,10 +212,6 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath="..\..\gameswf_as_classes\as_key.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\gameswf_action.cpp"
 				>
 			</File>
@@ -340,10 +336,6 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-			<File
-				RelativePath="..\..\gameswf_as_classes\as_key.h"
-				>
-			</File>
 			<File
 				RelativePath="..\..\gameswf.h"
 				>
@@ -703,6 +695,14 @@
 			</File>
 			<File
 				RelativePath="..\..\gameswf_as_classes\as_db.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\gameswf_as_classes\as_key.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\gameswf_as_classes\as_key.h"
 				>
 			</File>
 			<File
